--- a/mainnv2.css
+++ b/mainnv2.css
@@ -9,6 +9,7 @@ html, body {
     position: fixed;
     top:0;
     padding-left: 400px;
+    cursor: pointer;
 }
 
 .bar {
@@ -18,9 +19,10 @@ html, body {
     background-color: linear-gradient(-90deg, #062238,#004E9A);
     float:left;
     margin: 0;
-    padding: 9px 20px 0;
+    padding: 9px 17px 0;
     box-sizing: border-box;
     font-size:12px
+    
 }
 
 .bar:hover {
@@ -101,6 +103,7 @@ html, body {
     background-repeat: no-repeat;
     background-position: top left 150px;
     background-origin: content-box;
+    filter: drop-shadow(0.5em 0.5em 0.5em #d04f4f);
 }
 
 .profile1 {
@@ -119,6 +122,7 @@ html, body {
     background-repeat: no-repeat;
     background-position: top left 150px;
     margin-top: 30px;   
+    filter: drop-shadow(0.5em 0.5em 0.5em #d04f4f);
 }
 .profile2 {
     margin-left: 450px;
@@ -135,6 +139,7 @@ html, body {
     background-size: contain;
     background-repeat: no-repeat;
     background-position: top left 150px;
+    filter: drop-shadow(0.5em 0.5em 0.5em #d04f4f);
 }
 
 .profile3 {
@@ -377,13 +382,61 @@ a:hover {
     -webkit-text-fill-color: transparent;
 }
 
+.slider {
+    width: 80%;
+    margin:0 auto;
+    overflow: hidden;
+    padding-top: 40px;
+    filter: drop-shadow(0.5em 0.5em 0.5em  #000000);
+}
 
-/* Mobile: width < 740px */
- @media only screen and (max-width:739px) {
-    
- }
+.slider_imgs {
+    display: flex;
+}
 
- /* Tablet: width >=740px and width < 1024px */
-@media only screen and (min-width:740px) {
-    
+.slider_imgs img {
+    width: 100%;
+
+}
+
+.slider_imgs input {
+    display: none;
+}
+
+.labelslider {
+    display: flex;
+    justify-content: center;
+}
+
+.labelslider label {
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    border: 1px solid #9b2020;
+    margin-top: 20px;
+    margin-right: 10px;
+}
+
+.labelslider label:hover {
+    background: -webkit-linear-gradient(180deg,#ff7171, #9b2020);
+}
+
+#imgg1:checked ~.imgslider1 {
+    margin-left: -100%;
+}
+
+#imgg2:checked ~.imgslider2 {
+    margin-left: -200%;
+}
+
+#imgg3:checked ~.imgslider3 {
+    margin-left: -300%;
+}
+
+#imgg4:checked ~.imgslider4 {
+    margin-left: -400%;
+}
+
+#imgg5:checked ~.imgslider5 {
+    margin-left: -500%;
 }
